--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="container">
-        <h1>Witaj na stronie arona haha :3</h1>
+        <h1>Witaj na stronie arona haha :)</h1>
         <button id="myButton">Kliknij mnie</button>
     </div>
 
